@@ -334,6 +334,9 @@ x - 8.6658330059232182300986473411838935307*x^5 + 21.66516806678406090668397
 [0.49999999999999999999999999999999999982 + 0.999999999999999999999999999999
 99999992*I, 1.5617041082089070087003342842479112066 + 0.56028539298876740518
 391807553710802962*I]
+  ***   at top-level: ellpointtoz(e,[Mod(3
+  ***                 ^--------------------
+  *** ellpointtoz: incorrect type in ellpointtoz (t_VEC).
 4 + 7*11 + 9*11^2 + 5*11^3 + 2*11^4 + 9*11^5 + 8*11^6 + O(11^8)
 O(11^8)
 Mod((2 + 2*3 + 2*3^2 + 2*3^3 + 2*3^4 + 2*3^5 + 2*3^6 + 2*3^7 + 2*3^8 + O(3^9
@@ -346,7 +349,7 @@ Mod((2 + 3 + 2*3^4 + 2*3^6 + 2*3^7 + 2*3^8 + O(3^9))*x + (2*3 + 3^2 + 3^3 +
   ***   in function testzellQp: ...inttoz(e,P);print(a);a^2-
   ***   ellpointtoz(e,elladd
   ***   ^--------------------
-  *** ellpointtoz: domain error in ellztopoint: point not on E
+  *** ellpointtoz: domain error in ellpointtoz: point not on E
 Mod((1 + 3^2 + 3^3 + 2*3^4 + 3^5 + 2*3^6 + 3^7 + 2*3^8 + 2*3^9 + O(3^10))*x 
 + (1 + 3 + 2*3^2 + 2*3^4 + 2*3^5 + 3^6 + 3^8 + 2*3^9 + O(3^10)), x^2 + (3 + 
 3^3 + 2*3^4 + 3^5 + 2*3^6 + 3^7 + 2*3^8 + 3^9 + 2*3^10 + 3^11 + O(3^13)))
@@ -536,4 +539,4 @@ t + 1/3*t^3 - 1/2*t^4 + 14/15*t^5 + O(t^6)
   *** ellformalw: domain error in ellformalw: precision <= 0
 242.47010035195076100129810400142304776
 0
-Total time spent: 572
+Total time spent: 671
