@@ -217,6 +217,8 @@ testzellQp(e, P)=
   a^2 - ellpointtoz(e, elladd(e,P,P));
 }
 e=ellinit([0,-1,1,0,0], O(11^5));
+\\ BIB #1840
+ellpointtoz(e,[Mod(3,'x^2+1),1]);
 testzellQp(e, [0,0])
 e=ellinit([1,1,1,-10,-10], O(3^5));
 testzellQp(e, [3,-2])
